# aidos

./: .env.example  .gitignore  Makefile  README.md  ROADMAP_AGENT.md  ROADMAP_SPEAKER.md  pyproject.toml
.ai-factory/: PLAN.md
src/aidos/: __init__.py  main.py
src/aidos/agents/: __init__.py  ai_agent.py  music_agent.py  reminder_agent.py  time_agent.py  weather_agent.py
src/aidos/core/: __init__.py  agentrouter_client.py  ai_factory.py  ai_provider.py  config.py  intent_classifier.py  memory.py  ollama_client.py  openrouter_client.py  router.py  skill_loader.py  tool_registry.py  tts.py  voice.py  wake_word.py
src/aidos/skills/: __init__.py  calculator.py  cooking.md
src/aidos/ui/: __init__.py  app.py  chat.py  session.py  sidebar.py  theme.py
